--- a/app/views/headers/_default.html.erb
+++ b/app/views/headers/_default.html.erb
@@ -3,6 +3,7 @@
     <div class="logo-box absolute unselectable" style="height: 62px; line-height: 62px;">
 	    <%=link_to_if !is_onboarding?,
 	        image_tag("logos/mine-h-white-58-brighter-2x.png", 
+	        	:alt => "Mine",
 	          :class => "logo"),
 	        root_path(:src => "bar")%>
     </div>
@@ -18,7 +19,7 @@
             style="float: left; width: 28px; padding: 0; border: 0; margin-right: 6px;">
             <%=image_tag self.current_user.square_image_url,
                   :class => "user-photo m rounded-2",
-                  :style => ""%>
+                  :alt => self.current_user.full_name%>
           </a>
 
           <input type="text" placeholder="Search for people" class="m search border-box rounded-2" id="users_search_query" 
@@ -41,7 +42,7 @@
                               padding: 6px 7px 8px;"%>   
 
           <%unless is_phone_device?%>
-	          <div id="notifications_box" 
+	          <div id="notifications_box" 	
               style="z-index: 3;" 
               class="btn-group rwd-hide relative">
 		          <a class="btn btn-red rounded-2 dropdown-toggle 
