restored deleted img, tweaks

--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -74,9 +74,8 @@
     </span>
 
     <span class="message-nothing">
-	    Sorry, Mine couldn't find any
-      <br class="rwd-show"> of your e-receipts at this time.<br class="rwd-show"> 
-	    <a class="light underlined" href="<%=root_path%>">Close</a>
+	    Couldn't find any e-receipts at this time.<br class="rwd-show"> 
+	    <a class="light" href="<%=root_path%>" style="padding-left: 3px;">Close</a>
     </span>
 
     <span class="message-wiped">
