hotmail connect validation message

--- a/app/views/hotmail/_auth_dialog.html.erb
+++ b/app/views/hotmail/_auth_dialog.html.erb
@@ -43,6 +43,7 @@
 	          </span>
 	          <i class="icon-loading icon-white"></i>
       		</button> <!-- submit -->
+      		<span class="invalid txt s">Invalid email or password.</span>
 		    </div>
 				<div class="extras txt s border-box inline-block">
 		    </div>
