--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -548,8 +548,7 @@ ul.notifications li.user-action-box {
 	height: 20px;
 	background: url("/images/loading/loading-snake-FFF-999-20.gif"); }
 	
-.onboarding .hotmail-connect input:focus { background: #f5f5f5; }
-.onboarding .hotmail-connect input:focus { background: #f8f8f8; }
+.onboarding input:focus { background: #f8f8f8; }
 
 
 /* Feed
