welcome info tweak

--- a/app/views/welcome/info.html.erb
+++ b/app/views/welcome/info.html.erb
@@ -60,7 +60,7 @@
 
     <button id="submit_button" 
         type="submit" 
-        class="btn btn-large btn-silver border-box shaded rounded-5"
+        class="btn btn-large btn-silver light border-box shaded rounded-5"
         style="width: 120px; margin-top: 24px;">
         <span class="hide-when-loading">
           Next
