move feedback widget to footer.

--- a/app/views/footers/_default.html.erb
+++ b/app/views/footers/_default.html.erb
@@ -33,6 +33,9 @@
   		<li>
   			<%=email_link%>
   		</li>
+      <li>
+        <a href="http://getmine.uservoice.com/" target="_blank">Support</a>
+      </li>
   	</ul>
   	
   </div>
