--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -93,7 +93,7 @@
 
           new Denwen.Partials.Notifications.List({el:$('#notifications_box')});
 
-          <%if !is_phone_device? && !Rails.env.starts_with?('d')%>
+          <%if false && !is_phone_device? && !Rails.env.starts_with?('d')%>
             var uvOptions = {};
             (function() {
               var uv = document.createElement('script'); uv.type = 'text/javascript'; uv.async = true;
