logged out user box mssg

--- a/app/views/users/_box.html.erb
+++ b/app/views/users/_box.html.erb
@@ -67,7 +67,8 @@
 		<div class="bio-box">
 			<div class="user-bio txt m border-box">
 
-      	Discover the best that <%=h user.first_name%> buys.
+      	<%=h user.first_name%> is sharing purchases on Mine.<br>
+      	View your purchase history · Browse · Shop · 
 
         <%=link_to "Learn more",
             root_path(:src => "learn"),
