removing unusued og images from home page

--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -10,13 +10,7 @@
               :type         => 'website',
               :description  => "A directory of people and purchases.",
               :url          => root_url,
-              :images        => [
-                                image_path('og/mine-white-200.png'),
-                                image_path('og/og1.png'),
-                                image_path('og/og2.png'),
-                                image_path('og/og3.png'),
-                                image_path('og/og4.png'),
-                                image_path('og/og5.png')]}%>
+              :images       => [image_path('og/mine-white-200.png')]}%>
 <%end%>
 
 
