the return of orange.

--- a/app/views/home/_hulu.html.erb
+++ b/app/views/home/_hulu.html.erb
@@ -2,7 +2,7 @@
 
 	<div class="nav login absolute border-box relative unselectable">
 	
-		Already set up on Mine?
+		Already on Mine?
 		
 			<a class="dark"
 					href="javascript:void(0)" 
