--- a/app/views/home/_hulu.html.erb
+++ b/app/views/home/_hulu.html.erb
@@ -40,9 +40,9 @@
 				</a>
 			</span> <!-- /join -->
 			
-			<span class="or">OR</span>
+			<span class="or rwd-hide">OR</span>
 			
-			<span class="sms">
+			<span class="sms rwd-hide">
 				<a class="btn-sms white inline-block pointer opacity-80-100 transition-opacity"
 					href="javascript:void(0)" 
 	        id="sms" 
