--- a/app/views/home/_hulu.html.erb
+++ b/app/views/home/_hulu.html.erb
@@ -46,7 +46,7 @@
 				<a class="btn-sms white inline-block pointer opacity-80-100 transition-opacity"
 					href="javascript:void(0)" 
 	        id="sms" 
-	        onclick="mixpanel.track('Text Me Clicked');">
+	        onclick="setTimeout(function(){$('#phone').focus()},750);mixpanel.track('Text Me Clicked');">
 					<span class="">
 						<%=image_tag "icons/icon-phone-receive-2x.png",
 				    		:class => "phone-receive",
@@ -77,25 +77,25 @@
 	<a href="<%=fb_auth_path(:src => @origin,:target => params[:target])%>" 
 	    onclick="this.className += ' load';"
 	    class="btn btn-facebook rounded-3-left shaded-strong relative">
-	  <span class='hide-when-loading'>
+	  <span class="hide-when-loading">
 	    <%=image_tag "social/f-box.png",
 	    :class => "f-box",
 	    :alt => ""%>
 	    Facebook
 	  </span>
-	  <i class='icon-loading icon-white'></i>
+	  <i class="icon-loading icon-white"></i>
 	</a>
 	
 	<a href="<%=tw_auth_path(:src => @origin,:target => params[:target])%>" 
 	    onclick="this.className += ' load';"
 	    class="btn btn-twitter rounded-3-right shaded-strong relative">
-	  <span class='hide-when-loading'>
+	  <span class="hide-when-loading">
 	    <%=image_tag "social/t-box.png",
 	    :class => "t-box",
 	    :alt => ""%>
 	    Twitter
 	  </span>
-	  <i class='icon-loading icon-white'></i>
+	  <i class="icon-loading icon-white"></i>
 	</a>
 	
 	<div class="reassurance">
@@ -107,8 +107,6 @@
 
 
 <div id="sms_content" class="" style="display: none;">
-	
-	<div class="frame-border absolute"></div>
 
 	<div class="heading">
 		Number
@@ -117,7 +115,7 @@
 		</span>
 	</div>
 	
-	<input type="tel" class="number border-box transition-bg" style="width: 100%; height: 28px;">
+	<input id="phone" type="tel" onfocus="$.mask.definitions['~'] = '[+-]';$('#phone').mask('(999) 999-9999');" class="number border-box transition-bg" style="width: 100%; height: 28px;">
 	
 	<label class="carrier inline-block">
 		<%=image_tag "logos/carrier-att-48-2x.png",
@@ -151,10 +149,10 @@
 	    onclick="this.className += ' load';"
 	    class="btn btn-send-sms rounded-3 shaded-strong relative nowrap">
 	  <span class="out">
-		  <span class='hide-when-loading'>
+		  <span class="hide-when-loading">
 		    Send
 		  </span>
-		  <i class='icon-loading icon-white'></i>
+		  <i class="icon-loading icon-white"></i>
 	  </span>
 	  <span class="in">
 			<i class="icon-ok icon-white"></i>
@@ -170,25 +168,24 @@
 	<a href="<%=fb_auth_path(:src => @origin,:target => params[:target])%>" 
 	    onclick="this.className += ' load';"
 	    class="btn btn-large btn-facebook rounded-3-left shaded-strong relative">
-	  <span class='hide-when-loading'>
+	  <span class="hide-when-loading">
 	    <%=image_tag "social/f-box.png",
 	    :class => "f-box"%>
 	    Facebook
 	  </span>
-	  <i class='icon-loading icon-white'></i>
+	  <i class="icon-loading icon-white"></i>
 	</a><a href="<%=tw_auth_path(:src => @origin,:target => params[:target])%>" 
 	    onclick="this.className += ' load';"
 	    class="btn btn-large btn-twitter rounded-3-right shaded-strong relative">
-	  <span class='hide-when-loading'>
+	  <span class="hide-when-loading">
 	    <%=image_tag "social/t-box.png",
 	    :class => "t-box"%>
 	    Twitter
 	  </span>
-	  <i class='icon-loading icon-white'></i>
+	  <i class="icon-loading icon-white"></i>
 	</a>
 	
 </div>
-
 
 
 <%content_for :javascript do%>
@@ -212,9 +209,19 @@
                   trigger: "click", 
                   placement:"bottom",
                   content: function() {return $('#login_content').html();}}); 
+
     });  
 	</script> 
+	
+<script src="/javascripts/libs/jquery.maskedinput.js" type="text/javascript"></script>
+<script type="text/javascript">
+  $(function() {
+      $.mask.definitions['~'] = "[+-]";
+      $("#phone").mask("(999) 999-9999");
+	});
+</script>
 
+	
   <!--script type="text/javascript">
 
     // Listen for messages from the player
