--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -18,15 +18,15 @@
                   "import-star-check-ccc-32-2x.png" :
                   "import-star-ccc-32-2x.png",
           :style => "width: 32px; top: 0; left: 0;",
-          :class => "absolute opacity-80"%>
-    <div class="txt m top-line opacity-80 unselectable">
+          :class => "absolute"%>
+    <div class="txt m top-line unselectable">
       <%if self.current_user.email_authorized?%>
-        Great, you're connected
+        You're connected
       <%else%>
         <%=h self.current_user.first_name%>, start your Mine
       <%end%>
     </div>
-    <span class="txt s bottom-line opacity-80 unselectable" href="javascript:void(0)">
+    <span class="txt s bottom-line unselectable" href="javascript:void(0)">
       <%if self.current_user.email_authorized?%>
         Checking for new purchases in: <%=pluralize days_to_email_import,"day"%>
       <%else%>
