home button wiggle on click

--- a/app/views/home/_hulu.html.erb
+++ b/app/views/home/_hulu.html.erb
@@ -30,7 +30,7 @@
 		
 			<span class="join">
 				<a style="background-color: #FF6600;" 
-	        class="btn btn-large btn-join rounded-5 shaded-strong relative unselectable" 
+	        class="btn btn-large btn-join wiggle rounded-5 shaded-strong relative unselectable" 
 					href="javascript:void(0)" 
 	        id="join" 
 	        onclick="mixpanel.track('Sign Up Clicked');">
