--- a/app/views/home/_hulu.html.erb
+++ b/app/views/home/_hulu.html.erb
@@ -46,7 +46,7 @@
 				<a class="btn-sms white inline-block pointer opacity-80-100 transition-opacity"
 					href="javascript:void(0)" 
 	        id="sms" 
-	        onclick="setTimeout(function(){$('#phone').focus()},750);mixpanel.track('Text Me Clicked');">
+	        onclick="setTimeout(function(){$('#phone').focus()},750);mixpanel.track('SMS Initiated');">
 					<span class="">
 						<%=image_tag "icons/icon-phone-receive-2x.png",
 				    		:class => "phone-receive",
@@ -145,8 +145,9 @@
 		<input type="radio" name="carriers" value="">
 	</label>
 	
-	<a href="<%=tw_auth_path(:src => @origin,:target => params[:target])%>" 
-	    onclick="this.className += ' load';"
+	<a href="javascript:void(0)"
+      onclick="this.className += ' load'; $.post('sms.json',{to: $('#phone').val()},function(data){$('#send_sms').addClass('pushed');mixpanel.track('SMS Sent');});"
+      id="send_sms"
 	    class="btn btn-send-sms rounded-3 shaded-strong relative nowrap">
 	  <span class="out">
 		  <span class="hide-when-loading">
