--- a/app/views/home/_hulu.html.erb
+++ b/app/views/home/_hulu.html.erb
@@ -43,7 +43,7 @@
 			<span class="or rwd-hide">OR</span>
 			
 			<span class="sms rwd-hide">
-				<a class="btn-sms white inline-block pointer opacity-80-100 transition-opacity"
+				<a class="btn-sms white border-box inline-block pointer opacity-80-100 transition-opacity"
 					href="javascript:void(0)" 
 	        id="sms" 
 	        onclick="setTimeout(function(){$('#phone').focus()},750);mixpanel.track('SMS Initiated');">
@@ -115,36 +115,8 @@
 		</span>
 	</div>
 	
-	<input id="phone" type="tel" onfocus="$.mask.definitions['~'] = '[+-]';$('#phone').mask('(999) 999-9999');" class="number border-box transition-bg" style="width: 100%; height: 28px;">
-	
-	<label class="carrier inline-block">
-		<%=image_tag "logos/carrier-att-48-2x.png",
-	     :class => "logo",
-	     :alt => ""%>
-		<input type="radio" name="carriers" value="" checked>
-	</label>
-	
-	<label class="carrier inline-block">
-		<%=image_tag "logos/carrier-verizon-48-2x.png",
-	     :class => "logo",
-	     :alt => ""%>
-		<input type="radio" name="carriers" value="">
-	</label>
-	
-	<label class="carrier inline-block">
-		<%=image_tag "logos/carrier-sprint-48-2x.png",
-	     :class => "logo",
-	     :alt => ""%>
-		<input type="radio" name="carriers" value="">
-	</label>
-	
-	<label class="carrier inline-block">
-		<%=image_tag "logos/carrier-tmobile-48-2x.png",
-	     :class => "logo",
-	     :alt => ""%>
-		<input type="radio" name="carriers" value="">
-	</label>
-	
+	<input id="phone" type="tel" autocomplete="off" onfocus="$.mask.definitions['~'] = '[+-]';$('#phone').mask('(999) 999-9999');" class="number border-box transition-bg" style="width: 100%; height: 28px;">
+		
 	<a href="javascript:void(0)"
       onclick="this.className += ' load'; $.post('sms.json',{to: $('#phone').val()},function(data){$('#send_sms').addClass('pushed');mixpanel.track('SMS Sent');});"
       id="send_sms"
