--- a/app/views/home/_hulu.html.erb
+++ b/app/views/home/_hulu.html.erb
@@ -1,7 +1,6 @@
 <div class="wrapper unselectable">
 
 	<div class="nav login absolute border-box relative unselectable">
-	
 		Already on Mine?
 		
 			<a class="dark"
@@ -11,8 +10,8 @@
 	  			id="login">
 					<b class="opacity-80-100 transition-opacity">Log In</b>
 			</a>
-		
 	</div>
+
 	
 	<div class="home-container absolute">
 	
@@ -115,11 +114,16 @@
 		</span>
 	</div>
 	
-	<input id="phone" type="tel" autocomplete="off" onfocus="$.mask.definitions['~'] = '[+-]';$('#phone').mask('(999) 999-9999');" class="number border-box transition-bg" style="width: 100%; height: 28px;">
+	<input id="phone" 
+    type="tel" 
+    autocomplete="off" 
+    onfocus="$('#phone').mask('(999) 999-9999');" 
+    class="number border-box transition-bg" 
+    style="width: 100%; height: 28px;">
 		
 	<a href="javascript:void(0)"
-      onclick="this.className += ' load'; $.post('sms.json',{to: $('#phone').val()},function(data){$('#send_sms').addClass('pushed');mixpanel.track('SMS Sent');});"
-      id="send_sms"
+      onclick="dispatchSMS()"
+      id="sms_send_button"
 	    class="btn btn-send-sms rounded-3 shaded-strong relative nowrap">
 	  <span class="out">
 		  <span class="hide-when-loading">
@@ -147,7 +151,8 @@
 	    Facebook
 	  </span>
 	  <i class="icon-loading icon-white"></i>
-	</a><a href="<%=tw_auth_path(:src => @origin,:target => params[:target])%>" 
+	</a>
+  <a href="<%=tw_auth_path(:src => @origin,:target => params[:target])%>" 
 	    onclick="this.className += ' load';"
 	    class="btn btn-large btn-twitter rounded-3-right shaded-strong relative">
 	  <span class="hide-when-loading">
@@ -164,7 +169,6 @@
 <%content_for :javascript do%>
 
 	<script type="text/javascript">  
-    $(document).ready(function(){
       $("#join").popover({ 
                   html: true, 
                   trigger: "click", 
@@ -183,17 +187,15 @@
                   placement:"bottom",
                   content: function() {return $('#login_content').html();}}); 
 
-    });  
-	</script> 
-	
-<script src="/javascripts/libs/jquery.maskedinput.js" type="text/javascript"></script>
-<script type="text/javascript">
-  $(function() {
-      $.mask.definitions['~'] = "[+-]";
-      $("#phone").mask("(999) 999-9999");
-	});
-</script>
 
+      function dispatchSMS() {
+        $('#sms_send_button').addClass('load');
+        $.post('sms.json',{to: $('#phone').val()},
+          function(data) {
+            $('#sms_send_button').addClass('pushed'); 
+            mixpanel.track('SMS Sent');});
+      }
+	</script> 
 	
   <!--script type="text/javascript">
 
