faq updated# with '#' will be ignored, and an empty message aborts the commit.

--- a/app/views/static/faq.html.erb
+++ b/app/views/static/faq.html.erb
@@ -20,7 +20,7 @@
           "log in",
           root_path(:src => "faq"),
           :class => "dark underlined"%>
-      you need either a Twitter or Facebook account.
+      you need either a Facebook or Twitter account.
 			If you want to share your purchases out to Facebook, Twitter and Tumblr, you'll need accounts for these services.
 		</p>
 	</div>
@@ -36,7 +36,7 @@
 		<h4>What does following someone on Mine do?</h4>
 		<p class="txt m border-box" style="margin-bottom: 0;">
 			When you click the 'Follow' button next to a user's name, you'll start seeing purchased items they've shared in your feed when you log in.
-			You can follow and unfollow anyone you like, at any time.
+			You can follow and unfollow anyone at any time.
 		</p>
 	</div>
 	
