idual column work on feed, pre-search

--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -196,7 +196,7 @@
 <%end%>
 
 <div class="feed-container">
-	<div id="feed" class="feed relative">
+	<div id="feed" class="feed col-2 relative">
 	</div> 
 	
 	<div id="feed-spinner" class="feed-loading dark">
